src/objects/Appcues__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appcues</relationshipLabel>
        <relationshipName>Appcues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appcues</relationshipLabel>
        <relationshipName>Appcues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>testing the connection post refresh</description>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Appcues</label>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>Appcues Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appcues</pluralLabel>
    <recordTypes>
        <fullName>Appcues_Event_RT</fullName>
        <active>true</active>
        <label>Appcues Event RT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>